[tool.poetry]
name = "account-management"
version = "0.1.0"
description = "account-management"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.12.7"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic = { version = ">=2.11.7,<3.0.0", extras = ["email"] }

[tool.poetry.scripts]
start = "app.main:main"
dev = "app.main:dev"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
